custom-hook-fetch

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   --primary: #117EA9;
   --secondary: #E78613;
-  background-color: #E0D8F0;
+  background-color: #E0D8F0; 
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -29,7 +29,7 @@ a:hover {
 }
 
 body {
-  width: 100vw;
+  max-width: 100vw;
   display: flex;
   place-items: center;
  
