--- a/src/components/Start.css
+++ b/src/components/Start.css
@@ -1,6 +1,6 @@
 .start{
     margin: 2rem 2rem;
-    width: 100vw;
+    max-width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
